[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/dodger1.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemies/BaseEnemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Dodge.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/dodge.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sprites/dodger2.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.36448
height = 5.22865

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 7 )

[node name="Dodger" instance=ExtResource( 2 )]

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 2 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CooldownTimer" parent="." index="2"]
process_mode = 0
wait_time = 2.0
autostart = false

[node name="DodgeTween" type="Tween" parent="." index="5"]
script = ExtResource( 3 )

[node name="TriggerArea" type="Area2D" parent="." index="6"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea" index="0"]
position = Vector2( 0, 14 )
shape = SubResource( 3 )

[node name="ShootAudio" parent="." index="8"]
stream = ExtResource( 4 )
[connection signal="timeout" from="CooldownTimer" to="DodgeTween" method="_on_CooldownTimer_timeout"]
[connection signal="tween_completed" from="DodgeTween" to="DodgeTween" method="_on_DodgeTween_tween_completed"]
[connection signal="body_entered" from="TriggerArea" to="DodgeTween" method="_on_TriggerArea_body_entered"]
